fix content width for eliminate horizontal scroll (for DetailViews)

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -7693,7 +7693,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 91%;
+        width: 90%;
     }
 
     .button-toggle-expanded {
